# AdvBuildingGym

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_windows.txt  requirements_windows_v2.txt  run_evaluation.py  run_evaluation_ray.py  run_train_ray.py  run_train_rl.py  run_train_sb.py
adv_building_gym/: __init__.py  env_config.py  setup.py
data/: 20250425-153540-at-marketdata.xlsx  20250425-153541-at-marketdata.xlsx  20250425-153542-at-marketdata.xlsx  20250425-153543-at-marketdata.xlsx  LLEC_outdoor_temperature_5min_data.csv  LLEC_outdoor_temperature_5min_data_cleaned.csv  LLEC_outdoor_temperature_data.csv  price_data_2025.xlsx  price_data_2025_raw.csv
llec_building_gym/: __init__.py  env_config.py  setup.py
plot-paper/: 08-12-2025_RL_Workshop.ipynb  check_envs_registration.ipynb  generate_table03_summary_stats.ipynb  plot_fig03_temperature_data.ipynb  plot_fig04_price_data.ipynb  plot_fig05_indoor_temp_setpoint.ipynb  preprocess_outdoor_temperature.ipynb
preproc/: __init__.py  config.yaml  explore_hdf5.py  explore_hdf5_notebook.ipynb
slurm_logs_eval/: slurm-eval-%j-1522982.err  slurm-eval-%j-1522982.out  slurm-eval-%j-1522983.err  slurm-eval-%j-1522983.out  slurm-eval-01-1522984.err  slurm-eval-01-1522984.out  slurm-eval-02-1522985.err  slurm-eval-02-1522985.out  slurm-eval-03-1522986.err  slurm-eval-03-1522986.out  slurm-eval-04-1522987.err  slurm-eval-04-1522987.out  slurm-eval-mpc-1523006.err  slurm-eval-mpc-1523006.out  slurm-eval-mpc-1586792.err  slurm-eval-mpc-1586792.out  slurm-eval-rbc-1586791.err  (+11 more)
(+235 files in other folders)
