[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llec-building-gym"
version = "0.1.0"
description = "A Gymnasium-compatible environment for controlling building heating systems based on KIT's LLEC."
authors = [
    { name = "Gökhan Demirel", email = "goekhan.demirel@kit.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "gymnasium==0.29.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "matplotlib==3.8.4",
    "stable-baselines3==2.2.1",
    "pyomo==6.8.2",
    "imitation==1.0.1"
]

[tool.setuptools]
packages = ["llec_building_gym"]
